--- a/app/src/main/res/drawable/rounded_edittext_boarder_bg.xml
+++ b/app/src/main/res/drawable/rounded_edittext_boarder_bg.xml
@@ -3,7 +3,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
     <stroke android:width="2dp" android:color="#5d5b5b"/>
-    <solid android:color="#fcfcfc"/>
+    <solid android:color="#ffffff"/>
     <corners
         android:bottomRightRadius="10dp"
         android:bottomLeftRadius="10dp"
