--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -216,7 +216,7 @@
             android:layout_weight="1"
             android:layout_marginTop="65dp"
             android:backgroundTint="@color/white"
-            android:divider="#CCCCCC"
+            android:divider="#80333333"
             android:dividerHeight="1dp"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="12dp"
