--- a/app/src/main/res/layout-hdpi/activity_login.xml
+++ b/app/src/main/res/layout-hdpi/activity_login.xml
@@ -77,7 +77,7 @@
                     android:fontFamily="@font/dubai_font"
                     android:paddingStart="16dp"
 
-                    android:text="حقوق الطبع والنشر © بلدية دبي, جميع الحقوق محفوظة"
+                    android:text="حقوق الطبع والنشر © بلدية دبي. جميع الحقوق محفوظة"
                     android:textColor="@color/maroon_light"
                     android:textSize="9sp"
                     android:textStyle="bold" />
@@ -145,10 +145,10 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="110dp"
+                android:layout_height="110dp"
                 android:layout_marginStart="128.68dp"
-                android:layout_marginTop="72dp"
+                android:layout_marginTop="35dp"
 
                 android:layout_marginEnd="128.68dp"
                 android:src="@drawable/kharetati_white"
@@ -267,7 +267,7 @@
                                 android:textColor="@color/login_text_color"
                                 android:textColorHint="#6D6D6D"
                                 android:textFontWeight="1000"
-                                android:textSize="12sp"
+                                android:textSize="14sp"
                                 android:textStyle="bold" />
 
                             <ImageView
@@ -354,7 +354,7 @@
                                 android:textColorHint="#6D6D6D"
                                 android:textFontWeight="1000"
 
-                                android:textSize="12sp"
+                                android:textSize="14sp"
                                 android:textStyle="bold" />
 
 
@@ -413,7 +413,7 @@
                                 android:fontFamily="@font/dubai_font"
                                 android:gravity="center_vertical|start"
                                 android:text="@string/rememberme"
-                                android:textSize="12.5sp"
+                                android:textSize="14.5sp"
                                 android:textColor="@color/faded_text_color" />
 
                             <TextView
@@ -431,7 +431,7 @@
                                 android:text="@string/forgot_username_password"
                                 android:textAlignment="viewEnd"
                                 android:textColor="@color/faded_text_color"
-                                android:textSize="10.5sp" />
+                                android:textSize="12.5sp" />
 
                         </LinearLayout>
 
