--- a/app/src/main/res/layout-xxhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xxhdpi/activity_login.xml
@@ -76,7 +76,7 @@
                     android:layout_marginBottom="0dp"
                     android:fontFamily="@font/dubai_font"
                     android:textColor="@color/maroon_light"
-                    android:text="حقوق الطبع والنشر © بلدية دبي, جميع الحقوق محفوظة"
+                    android:text="حقوق الطبع والنشر © بلدية دبي. جميع الحقوق محفوظة"
                     />
                 <TextView
                     android:layout_width="wrap_content"
@@ -140,7 +140,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="110dp"
                 android:layout_height="110dp"
-                android:layout_marginTop="45dp"
+                android:layout_marginTop="60dp"
                 android:visibility="visible"
                 android:layout_marginStart="128.68dp"
                 android:layout_marginEnd="128.68dp"
