--- a/app/src/main/res/layout-xxxhdpi/activity_login.xml
+++ b/app/src/main/res/layout-xxxhdpi/activity_login.xml
@@ -76,7 +76,7 @@
                     android:layout_marginBottom="0dp"
                     android:fontFamily="@font/dubai_font"
                     android:textColor="@color/maroon_light"
-                    android:text="حقوق الطبع والنشر © بلدية دبي, جميع الحقوق محفوظة"
+                    android:text="حقوق الطبع والنشر © بلدية دبي. جميع الحقوق محفوظة"
                     />
                 <TextView
                     android:layout_width="wrap_content"
