--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -193,7 +193,7 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layoutDirection="locale"
-            android:background="#00000000"
+            android:background="@color/transparent"
             app:mbn_circleColor="@color/maroon_light"
             app:mbn_backgroundBottomColor="@color/maroon_light"
             app:mbn_rippleColor="#2f424242"
