--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -70,9 +70,9 @@
                         app:srcCompat="@drawable/ic_arrow" />
 
                     <LinearLayout
-                        android:layout_width="1dp"
+                        android:layout_width=".75dp"
                         android:layout_height="match_parent"
-                        android:background="#80333333"/>
+                        android:background="#333333"/>
 
                     <dm.sime.com.kharetati.view.customview.CleanableEditText
                         android:id="@+id/txtPlotNo"
@@ -96,9 +96,9 @@
                         android:layout_gravity="start|center_vertical"
                         android:src="@drawable/search_512" />
                     <LinearLayout
-                        android:layout_width="1dp"
+                        android:layout_width=".75dp"
                         android:layout_height="match_parent"
-                        android:background="#80333333"/>
+                        android:background="#333333"/>
 
                     <!--android:imeOptions="actionDone"
                     android:inputType="text"-->
@@ -165,7 +165,7 @@
                     <LinearLayout
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:background="#80333333"/>
+                        android:background="#333333"/>
                     <ImageView
                         android:id="@+id/imgMakani"
                         android:layout_width="50dp"
@@ -216,7 +216,7 @@
             android:layout_weight="1"
             android:layout_marginTop="65dp"
             android:backgroundTint="@color/white"
-            android:divider="#80333333"
+            android:divider="#CCCCCC"
             android:dividerHeight="1dp"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="12dp"
