--- a/app/src/main/res/layout/map_menu_item.xml
+++ b/app/src/main/res/layout/map_menu_item.xml
@@ -8,12 +8,14 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:padding="8dp"
+        android:background="@color/white"
         android:id="@+id/menuImage"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="40dp"
         android:padding="8dp"
+        android:background="@color/white"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:id="@+id/menuText"
